[package]
name = "rustblock"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
dns-lookup = "2.0.4"
iptables = { git = "https://github.com/steelswords/rust-iptables.git" }
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "rustblock"
path = "src/main.rs"

[[bin]]
name = "website-domain-gen"
path = "src/websitedomaingen.rs"
